# ishan-agents

./: .gitignore  README.md  TODO.md  agent.py  pyproject.toml
experiments/: README.md  swebench_fireworks_kimi.yaml  swebench_fireworks_qwen.yaml  terminal_bench_smoke.yaml
ishan_agents/: __main__.py  agent_loop.py  log.py
ishan_agents/harbor/: agent.py  sandbox.py
ishan_agents/llms/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py
ishan_agents/sandbox/: base.py  local.py
ishan_agents/tools/: __init__.py  base.py
ishan_agents/tools/claude_code/: __init__.py  tools.py
tests/: test_harbor_sandbox.py  test_llms.py  test_sandbox.py
