[project]
name = "ishan-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.86.0",
    "click==8.3.1",
    "harbor==0.3.0",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]

